--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -2,9 +2,9 @@
 <% layout("/layouts/boilerplate")  %>
 <body>
     <h3>All listing</h3>
-    <form method="GET" action="/listing/new">
+    <!-- <form method="GET" action="/listings/new">
         <button>Create new</button>
-    </form>
+    </form> -->
   <%  for (let listing of allListings) {%>
         <li> <a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
     <%}%>
