--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -6,21 +6,65 @@
     <title>WonderLust</title>
 </head>
 <body>
+    <% layout ("/layouts/boilerplate")%>
+    <div class="row">
+
+    <div class="col-8 offset-2 mt-3">
+        <br><br/>
+     
     <h3> Create new listing</h3>
     <form method="POST" action="/listings">
-    <input name="listing[title]" placeholder=" enter title" type="text">
-    <br><br>
-    <input name="listing[description]" placeholder=" enter description">
-    <br><br>
-    <input name="listing[image]" placeholder=" enter image URL/link" type="text">
-    <br><br>
-    <input name="listing[price]" placeholder=" enter price" type="number">
-    <br><br>
-    <input name="listing[location]" placeholder=" enter location" type="text">
-    <br><br>
-    <input name="listing[country]" placeholder=" enter country" type="text">
-    <br><br>
-    <button> Add</button>
+      
+
+
+        
+        <div class="mb-3">
+            <label for="title"  class="form-label"> Title</label>
+            <input name="listing[title]" placeholder=" Add a catchy title"
+             type="text" class="form-control" >
+        </div>
+    
+    <div class="mb-3">
+        <label for="description"  class="form-label">Description</label>
+        <textarea 
+        name="listing[description]"
+        class="form-control" ></textarea>
+    </div>
+    
+    <div class="mb-3">
+        <label for="image"  class="form-label"> Image Link</label>
+        <input name="listing[image]" placeholder=" enter image URL/link" type="text" 
+        class="form-control" ></div>
+   
+        <div class="row">
+            <div class="mb-3 col-md-4">
+                <label for="price"  class="form-label"> Price</v>
+                <input name="listing[price]"class="form-control" placeholder=" 1200" type="number"/>
+            </div>
+            <div class="mb-3 col-md-8 " >
+                <label for="country"  class="form-label"> Country</label>
+                <input name="listing[country]" class="form-control" 
+                placeholder=" India" type="text"/>
+            </div>
+            </div>
+        
+   
+   
+    <div class="mb-3">
+        <label for="location"  class="form-label" > Location</label>
+        <input name="listing[location]"
+        class="form-control" placeholder=" Jaipur, Rajasthan" type="text">
+    </div>
+ 
+   
+    
+    
+    
+    
+    <button class="btn btn-dark add-btn mt-3"> Add</button>
+    </div>
+    </div>
+    <br>
 
 </form>
     
