--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,7 @@
 
-<nav class="navbar navbar-expand-md  bg-body-light">
+<nav class="navbar navbar-expand-md  bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/"><i class="fa-solid fa-compass"></i></a>
     <button class="navbar-toggler"
      type="button" 
      data-bs-toggle="collapse"
