--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,9 +5,26 @@
     <!-- <form method="GET" action="/listings/new">
         <button>Create new</button>
     </form> -->
-  <%  for (let listing of allListings) {%>
-        <li> <a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
-    <%}%>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        <%  for (let listing of allListings) {%>
+            <a href="/listings/<%=listing._id%>" class="listing-link">
+                <div class="card col" >
+                    <img src="<%=listing.image %>" 
+                    class="card-img-top" alt="listing_image" 
+                    style="height: 20rem;" >
+                    <div class="card-body">
+                      <p class="card-text">
+                        <div class="card-img-overlay"></div>
+                       <b> <%= listing.title %></b><br>
+                            &#8377;<%=listing.price.toLocaleString("en-IN") %>/night
+                    </p>
+                    </div>
+                  </div>
+            </a>
+         
+              <%}%>
+    </div>
+    
 
     
 </body>
