--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,18 +1,38 @@
 <% layout("/layouts/boilerplate")  %>
-<body>
+<div class="row">
+    <div class="col-8 offset-3 mt-3">
+
+
     <h3> Listing Details</h3>
-    <ul>
-        <li><%=listing.title%></li>
-        <li><%=listing.description%></li>
-        <li> 	&#8377;<%=listing.price.toLocaleString("en-IN")%></li>
-        <li><%=listing.location%></li>
-        <li><%=listing.country%></li>
-     
-</ul><br>
-<a href="/listings/<%=listing._id%>/edit">Edit this listing</a>
-<br></br>
-<form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-    <button>Delete this listing</button>
+    </div>
+    <div class="card col-6 offset-3 show-card">
+        <img src="<%=listing.image%>" class="card-img-top show-image " 
+        alt="listing_image">
+        <div class="card-body">
+          <p class="card-text"><%=listing.title%></p>
+          <b>
+            <%=listing.title%>
+          </b> <br>
+          <%=listing.description%><br>
+          &#8377; <%=listing.price.toLocaleString("en-IN")%> <br>
+          <%=listing.country%> <br>
+          <%=listing.location%><br>
+
+        </div>
+
+    </div>
+   
+  <br>
+
 </form>
+<div class="btns">
+    <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark col-2 offset-3  edit-btn"> Edit</a>
+<br> <br/>
+<form method="POST" action="/listing/<%=listing._id%>?_method=DELETE">
+<button class=" btn btn-dark  offset-5"> Delete</button></form>
+<br>
     
-</body>
+    
+</div> </div>
+
+
