--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -28,7 +28,7 @@
 <div class="btns">
     <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark col-2 offset-3 mb-2 edit-btn"> Edit</a>
 <br> <br/>
-<form method="POST" action="/listing/<%=listing._id%>?_method=DELETE">
+<form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
 <button class=" btn btn-dark  offset-5"> Delete</button></form>
 
     
