--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -13,7 +13,7 @@
         <br><br/>
      
     <h3> Create new listing</h3>
-    <form method="POST" action="/listings">
+    <form method="POST" action="/listings" novalidate class="needs-validation">
       
 
 
@@ -21,14 +21,18 @@
         <div class="mb-3">
             <label for="title"  class="form-label"> Title</label>
             <input name="listing[title]" placeholder=" Add a catchy title"
-             type="text" class="form-control" >
+             type="text" class="form-control"
+             required />
+             <div class="valid-feedback"> Title looks good</div>
         </div>
     
     <div class="mb-3">
         <label for="description"  class="form-label">Description</label>
         <textarea 
         name="listing[description]"
-        class="form-control" ></textarea>
+        class="form-control"
+        required></textarea>
+    <div class="invalid-feedback"> Please enter short description</div>
     </div>
     
     <div class="mb-3">
@@ -39,12 +43,14 @@
         <div class="row">
             <div class="mb-3 col-md-4">
                 <label for="price"  class="form-label"> Price</v>
-                <input name="listing[price]"class="form-control" placeholder=" 1200" type="number"/>
+                <input name="listing[price]"class="form-control" placeholder=" 1200" type="number" required/>
+                <div class="invalid-feedback"> Price  should be valid </div>
             </div>
             <div class="mb-3 col-md-8 " >
                 <label for="country"  class="form-label"> Country</label>
                 <input name="listing[country]" class="form-control" 
                 placeholder=" India" type="text"/>
+                <div class="invalid-feedback"> Country name should be valid </div>
             </div>
             </div>
         
@@ -53,7 +59,8 @@
     <div class="mb-3">
         <label for="location"  class="form-label" > Location</label>
         <input name="listing[location]"
-        class="form-control" placeholder=" Jaipur, Rajasthan" type="text">
+        class="form-control" required  placeholder=" Jaipur, Rajasthan" type="text">
+        <div class="invalid-feedback"> Location  should be valid </div>
     </div>
  
    
