--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,7 +1,7 @@
 
 <% layout("/layouts/boilerplate")  %>
 <body>
-    <h3>All listing</h3>
+    <h3>All listing</h3>n
     <!-- <form method="GET" action="/listings/new">
         <button>Create new</button>
     </form> -->
