--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="mb-3 col-md-4">
                 <label for="price"  class="form-label"> Price</v>
-                <input name="listing[price]"class="form-control" placeholder=" 1200" type="number" />
+                <input name="listing[price]"class="form-control" placeholder=" 1200"  />
                 <div class="invalid-feedback"> Price  should be valid </div>
             </div>
             <div class="mb-3 col-md-8 " >
