--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -14,7 +14,7 @@
             <%=listing.title%>
           </b> <br>
           <%=listing.description%><br>
-          &#8377; <%=listing.price.toLocaleString("en-IN")%> <br>
+          &#8377; <%=listing.price%> <br>
           <%=listing.country%> <br>
           <%=listing.location%><br>
 
