--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,16 +3,14 @@
     <div class="col-8 offset-3 mt-3">
 
 
-    <h3> Listing Details</h3>
+    <h3> <%=listing.title%></h3>
     </div>
     <div class="card col-6 offset-3 show-card">
         <img src="<%=listing.image%>" class="card-img-top show-image " 
         alt="listing_image">
         <div class="card-body">
-          <p class="card-text"><%=listing.title%></p>
-          <b>
-            <%=listing.title%>
-          </b> <br>
+          <p class="card-text"></p>
+        
           <%=listing.description%><br>
           &#8377; <%=listing.price%> <br>
           <%=listing.country%> <br>
@@ -30,9 +28,22 @@
 <br> <br/>
 <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
 <button class=" btn btn-dark  offset-5"> Delete</button></form>
-
-    
-    
+</div>
+<div class="col-8 offset-3">
+  <hr/>
+  <h4> Leave a Review</h4>
+  <form 
+  action="/listings/<%= listing.id%>/reviews"  method="POST">
+    <div class="mt-3 mb-3">
+      <label for="rating" class="form-label"> Rating</label>
+      <input type="range" min="1" max="5"  id="rating" name="review[rating]"  class="form-range"> 
+    </div>
+    <div class="mt-3 mt-4">
+      <label type="commnet" class="form-label"> Comment</label>
+<textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
+    </div>
+    <button class="btn btn-outline-dark"> Submit</button>
+  </form>
 </div>
  </div>
 
