--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,7 @@
 
     <h3> <%=listing.title%></h3>
     </div>
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card" >
         <img src="<%=listing.image%>" class="card-img-top show-image " 
         alt="listing_image">
         <div class="card-body">
@@ -33,18 +33,53 @@
   <hr/>
   <h4> Leave a Review</h4>
   <form 
-  action="/listings/<%= listing.id%>/reviews"  method="POST">
+  action="/listings/<%= listing.id%>/reviews"  method="POST"
+   novalidate class="needs-validation">
     <div class="mt-3 mb-3">
       <label for="rating" class="form-label"> Rating</label>
-      <input type="range" min="1" max="5"  id="rating" name="review[rating]"  class="form-range"> 
+      <input type="range" 
+      min="1" max="5" 
+       id="rating"
+        name="review[rating]" 
+         class="form-range"> 
     </div>
     <div class="mt-3 mt-4">
-      <label type="commnet" class="form-label"> Comment</label>
-<textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
-    </div>
+      <label type="commnet" 
+      class="form-label"> Comment</label>
+<textarea name="review[comment]" 
+id="comment" 
+cols="30" 
+rows="5" 
+class="form-control" 
+required
+></textarea>
+
+    <div class="invalid-feedback">
+  Please add some comments for review</div>
+  </div>
     <button class="btn btn-outline-dark"> Submit</button>
   </form>
+<hr/>
+  <hr/>
+ <p> <b> All Reviews</b> </p>
+ <div class="row">
+  <% for(review of listing.reviews) {%>
+    <div class="card col-5 ms-3 mt-3">
+      <div class="card-body">
+        <h5 class="card-title"> Jane Doe</h5>
+        <p class="card-text"> <%=review.comment%></p>
+        <p class="card-text"><%= review.rating%> stars </p>
+      </div>
+   
+<form class="mb-3" method="POST" 
+action="/listings/<%=listing._id%>/reviews/<%= review._id%>?_method=DELETE">
+  <button class="btn btn-sm btn-dark" > Delete</button>
+</form>
 </div>
+  <%}%>
  </div>
+</div>
+</div>
+
 
 
