--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,6 @@
 
 <% layout("/layouts/boilerplate")  %>
+<%= success%>
 <body>
     <h3>All listing</h3>n
     <!-- <form method="GET" action="/listings/new">
