--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,12 +9,13 @@
         <img src="<%=listing.image%>" class="card-img-top show-image " 
         alt="listing_image">
         <div class="card-body">
-          <p class="card-text"></p>
+          
+          <p class="card-text"> Owned by-<i><%= listing.owner.username %> </i></p>
         
-          <%=listing.description%><br>
-          &#8377; <%=listing.price%> <br>
-          <%=listing.country%> <br>
-          <%=listing.location%><br>
+          <p class="card-text"><%=listing.description%></p>
+          <p class="card-text">&#8377; <%=listing.price%> <br></p>
+         <p class="card-text"> <%=listing.country%> <br></p>
+         <p class="card-text"> <%=listing.location%><br> </p>
 
         </div>
 
@@ -22,15 +23,21 @@
    
   <br>
 
-</form>
+</form> 
+<% if(currUser && listing.owner._id.equals(currUser._id)) { %>
 <div class="btns">
     <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark col-2 offset-3 mb-2 edit-btn"> Edit</a>
 <br> <br/>
 <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
 <button class=" btn btn-dark  offset-5"> Delete</button></form>
 </div>
+<% } %>
+
+
 <div class="col-8 offset-3">
+ 
   <hr/>
+  <% if(currUser) { %>
   <h4> Leave a Review</h4>
   <form 
   action="/listings/<%= listing.id%>/reviews"  method="POST"
@@ -59,14 +66,16 @@ required
   </div>
     <button class="btn btn-outline-dark"> Submit</button>
   </form>
-<hr/>
   <hr/>
+  <%} %>
+
+  
  <p> <b> All Reviews</b> </p>
  <div class="row">
   <% for(review of listing.reviews) {%>
     <div class="card col-5 ms-3 mt-3">
       <div class="card-body">
-        <h5 class="card-title"> Jane Doe</h5>
+        <h5 class="card-title"> @<%= review.author.username %></h5>
         <p class="card-text"> <%=review.comment%></p>
         <p class="card-text"><%= review.rating%> stars </p>
       </div>
