--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
     <h3> <%=listing.title%></h3>
     </div>
     <div class="card col-6 offset-3 show-card listing-card" >
-        <img src="<%=listing.image%>" class="card-img-top show-image " 
+        <img src="<%=listing.image.url%>" class="card-img-top show-image " 
         alt="listing_image">
         <div class="card-body">
           
@@ -82,8 +82,9 @@ required
   <%} %>
 
   
- <p> <b> All Reviews</b> </p>
- <div class="row">
+<% if(listing.reviews.length>0) {%>
+  <div class="row">
+  <p> <b> All Reviews</b> </p>
   <% for(review of listing.reviews) {%>
     <div class="card col-5 ms-3 mt-3">
       <div class="card-body">
@@ -103,8 +104,26 @@ action="/listings/<%=listing._id%>/reviews/<%= review._id%>?_method=DELETE">
 </div>
   <%}%>
  </div>
+ <%}%>
+ 
 </div>
+<div class="col-8 offset-3 mb-3">
+  <h3> Where you'll be</h3>
+<div id="map"></div> </div>
 </div>
+
+<script>
+  let mapToken = "<%= process.env.MAP_TOKEN%>"
+  console.log(mapToken);
+  mapboxgl.accesToken=mapToken
+  const map =new mapboxgl.Map({
+    
+    container:"map",
+    style:"mapbox://styles/mapbox/streets-v12",
+    center:[-74,5,48],
+    zoom:9
+  })
+</script>
 
 
 
