--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,3 +110,8 @@ border: none !important ;
     padding-left: 0;
     padding-right: 0;
 }
+/* map*/
+#map{
+    height:100px;
+    width: 100px;
+}
