--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,6 +14,10 @@
        crossorigin="anonymous" 
       referrerpolicy="no-referrer" />
       <link href="/css/rating.css" rel="stylesheet"> 
+      <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css"
+      rel="stylesheet">
+      <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 </head>
 <body>
     <%- include("../includes/navbar.ejs")%>
