--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -42,7 +42,8 @@
             <input name="listing[image]" 
           
              type="file" 
-            class="form-control" ></div>
+            class="form-control"
+            required ></div>
 
         <div class="row">
             <div class="mb-3 col-md-4">
