--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -33,9 +33,12 @@
        <img src="<%= originalImageUrl%>" >
      
     </div>
+    <div class="mb-3">
+        <label for="Image" class="form-label"> Upload new Image</label>
+        <input name="listing[image]" type="file" class="form-control">
+    </div>
     <div class="row">
-
-    <div class="mb-3 col-md-4">
+<div class="mb-3 col-md-4">
         <label for="price"  class="form-label">  Price</label>
         <input name="listing[price]" value="<%=listing.price%>" type="number" class="form-control" required>
         <div class="invalid-feedback"> Price should be valid</div>
